[package]
name = "mcp960x"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.5"
defmt = { version = "0.2.3", optional = true }
derive_more = "0.99.16"
num-derive = "0.3.3"
num-traits = "0.2.14"
fixed = "1.10.0"
embassy-traits = { git = "https://github.com/embassy-rs/embassy", optional = true }


[dev-dependencies]
defmt = "0.2.3"
defmt-rtt = "0.2.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "0.5.7"
nrf52840-hal = { version = "0.12.2", features = ["rt"] }
panic-probe = "0.2.0"


[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

default = ["defmt", "async"]

async = ["embassy-traits"]
