[package]
name = "mcp960x"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.6"
defmt = { version = "0.3.0", optional = true }
derive_more = "0.99.17"
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
fixed = "1.11.0"
embassy-traits = { git = "https://github.com/embassy-rs/embassy", optional = true }
bitutils = { version = "3.0.1", default-features = false }


[dev-dependencies]
# defmt = "0.3.0"
# defmt-rtt = "0.3.0"
# cortex-m = "0.7.3"
# cortex-m-rt = "0.7.0"
# cortex-m-rtic = "0.6.0-rc.4"
# nrf52840-hal = { version = "0.14.0", features = ["rt"] }
# panic-probe = "0.3.0"

[features]
default = ["async", "defmt"]

async = ["embassy-traits"]
